backup_scripts/recursos k8s/waste/json/get_all,pvc,configmaps,secrets,ingresses,networkpolicies,serviceaccounts.json
{
    "apiVersion": "v1",
    "items": [
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "cni.projectcalico.org/containerID": "7bd20ad142f03b76bebbc73357eab7ddcaccf2a5f4b21f8ded001412085c8b89",
                    "cni.projectcalico.org/podIP": "192.168.142.239/32",
                    "cni.projectcalico.org/podIPs": "192.168.142.239/32"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generateName": "backend-deployment-5dbb6ddd9d-",
                "labels": {
                    "app": "backend",
                    "pod-template-hash": "5dbb6ddd9d"
                },
                "name": "backend-deployment-5dbb6ddd9d-8h6rl",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "backend-deployment-5dbb6ddd9d",
                        "uid": "f94f3549-eaa2-419b-9b7a-689280367c98"
                    }
                ],
                "resourceVersion": "3096989",
                "uid": "099a71a5-1871-4185-ab79-c5da74118428"
            },
            "spec": {
                "containers": [
                    {
                        "env": [
                            {
                                "name": "MONGO_URI",
                                "value": "mongodb://mongodb-service:27017/"
                            },
                            {
                                "name": "MYSQL_HOST",
                                "value": "mysql-finances"
                            },
                            {
                                "name": "MYSQL_USER",
                                "value": "root"
                            },
                            {
                                "name": "MYSQL_PASSWORD",
                                "value": "password"
                            },
                            {
                                "name": "MYSQL_DATABASE",
                                "value": "financedb"
                            },
                            {
                                "name": "MYSQL_USERDB_HOST",
                                "value": "mysql-users"
                            },
                            {
                                "name": "MYSQL_USERDB_USER",
                                "value": "root"
                            },
                            {
                                "name": "MYSQL_USERDB_PASSWORD",
                                "value": "password"
                            },
                            {
                                "name": "MYSQL_USERDB_DATABASE",
                                "value": "userdb"
                            }
                        ],
                        "image": "stehedor/finance-backend-image",
                        "imagePullPolicy": "Always",
                        "name": "backend",
                        "ports": [
                            {
                                "containerPort": 5000,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-vldhh",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "enableServiceLinks": true,
                "nodeName": "kworker02.lab.local",
                "preemptionPolicy": "PreemptLowerPriority",
                "priority": 0,
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "kube-api-access-vldhh",
                        "projected": {
                            "defaultMode": 420,
                            "sources": [
                                {
                                    "serviceAccountToken": {
                                        "expirationSeconds": 3607,
                                        "path": "token"
                                    }
                                },
                                {
                                    "configMap": {
                                        "items": [
                                            {
                                                "key": "ca.crt",
                                                "path": "ca.crt"
                                            }
                                        ],
                                        "name": "kube-root-ca.crt"
                                    }
                                },
                                {
                                    "downwardAPI": {
                                        "items": [
                                            {
                                                "fieldRef": {
                                                    "apiVersion": "v1",
                                                    "fieldPath": "metadata.namespace"
                                                },
                                                "path": "namespace"
                                            }
                                        ]
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:56Z",
                        "status": "True",
                        "type": "PodReadyToStartContainers"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:56Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:56Z",
                        "status": "True",
                        "type": "ContainersReady"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "containerd://41e85e7fcf0bd91e2e9db062167d9102f977a6e17a2e8a0a18f823371f85dd4f",
                        "image": "docker.io/stehedor/finance-backend-image:latest",
                        "imageID": "docker.io/stehedor/finance-backend-image@sha256:8b6c3555df09ea6951f2f82c7830ebbc6a2db1aceedd341cdbc5411c65078dda",
                        "lastState": {
                            "terminated": {
                                "containerID": "containerd://4d94c54aa822a2bece492a4a097e47be4bd21f0498d07f087168205c28bf1fed",
                                "exitCode": 255,
                                "finishedAt": "2024-12-16T09:10:56Z",
                                "reason": "Unknown",
                                "startedAt": "2024-12-10T08:50:05Z"
                            }
                        },
                        "name": "backend",
                        "ready": true,
                        "restartCount": 5,
                        "started": true,
                        "state": {
                            "running": {
                                "startedAt": "2024-12-16T09:18:56Z"
                            }
                        },
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-vldhh",
                                "readOnly": true,
                                "recursiveReadOnly": "Disabled"
                            }
                        ]
                    }
                ],
                "hostIP": "172.16.1.205",
                "hostIPs": [
                    {
                        "ip": "172.16.1.205"
                    }
                ],
                "phase": "Running",
                "podIP": "192.168.142.239",
                "podIPs": [
                    {
                        "ip": "192.168.142.239"
                    }
                ],
                "qosClass": "BestEffort",
                "startTime": "2024-11-28T08:23:46Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "cni.projectcalico.org/containerID": "a5d35235dafb52e2ce75ccef88a888519006bc3f773156425b1e8d875292c2d4",
                    "cni.projectcalico.org/podIP": "192.168.138.117/32",
                    "cni.projectcalico.org/podIPs": "192.168.138.117/32"
                },
                "creationTimestamp": "2024-12-10T09:34:54Z",
                "generateName": "backend-deployment-5dbb6ddd9d-",
                "labels": {
                    "app": "backend",
                    "pod-template-hash": "5dbb6ddd9d"
                },
                "name": "backend-deployment-5dbb6ddd9d-dr2w5",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "backend-deployment-5dbb6ddd9d",
                        "uid": "f94f3549-eaa2-419b-9b7a-689280367c98"
                    }
                ],
                "resourceVersion": "3096731",
                "uid": "396847bb-aed3-43cf-a08b-c20cf2ec0f62"
            },
            "spec": {
                "containers": [
                    {
                        "env": [
                            {
                                "name": "MONGO_URI",
                                "value": "mongodb://mongodb-service:27017/"
                            },
                            {
                                "name": "MYSQL_HOST",
                                "value": "mysql-finances"
                            },
                            {
                                "name": "MYSQL_USER",
                                "value": "root"
                            },
                            {
                                "name": "MYSQL_PASSWORD",
                                "value": "password"
                            },
                            {
                                "name": "MYSQL_DATABASE",
                                "value": "financedb"
                            },
                            {
                                "name": "MYSQL_USERDB_HOST",
                                "value": "mysql-users"
                            },
                            {
                                "name": "MYSQL_USERDB_USER",
                                "value": "root"
                            },
                            {
                                "name": "MYSQL_USERDB_PASSWORD",
                                "value": "password"
                            },
                            {
                                "name": "MYSQL_USERDB_DATABASE",
                                "value": "userdb"
                            }
                        ],
                        "image": "stehedor/finance-backend-image",
                        "imagePullPolicy": "Always",
                        "name": "backend",
                        "ports": [
                            {
                                "containerPort": 5000,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-hzjfg",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "enableServiceLinks": true,
                "nodeName": "kworker01.lab.local",
                "preemptionPolicy": "PreemptLowerPriority",
                "priority": 0,
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "kube-api-access-hzjfg",
                        "projected": {
                            "defaultMode": 420,
                            "sources": [
                                {
                                    "serviceAccountToken": {
                                        "expirationSeconds": 3607,
                                        "path": "token"
                                    }
                                },
                                {
                                    "configMap": {
                                        "items": [
                                            {
                                                "key": "ca.crt",
                                                "path": "ca.crt"
                                            }
                                        ],
                                        "name": "kube-root-ca.crt"
                                    }
                                },
                                {
                                    "downwardAPI": {
                                        "items": [
                                            {
                                                "fieldRef": {
                                                    "apiVersion": "v1",
                                                    "fieldPath": "metadata.namespace"
                                                },
                                                "path": "namespace"
                                            }
                                        ]
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:17Z",
                        "status": "True",
                        "type": "PodReadyToStartContainers"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-10T09:34:54Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:17Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:17Z",
                        "status": "True",
                        "type": "ContainersReady"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-10T09:34:54Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "containerd://557a032f80fb5a2495ae6b50fa966cda29bf51872551ce46bf4cc2a5d2600d7a",
                        "image": "docker.io/stehedor/finance-backend-image:latest",
                        "imageID": "docker.io/stehedor/finance-backend-image@sha256:8b6c3555df09ea6951f2f82c7830ebbc6a2db1aceedd341cdbc5411c65078dda",
                        "lastState": {
                            "terminated": {
                                "containerID": "containerd://d3a1d066499819b6a7f3a2c4a9f31a615f7b656073d80fcca705321604d02678",
                                "exitCode": 255,
                                "finishedAt": "2024-12-16T09:10:50Z",
                                "reason": "Unknown",
                                "startedAt": "2024-12-10T09:34:55Z"
                            }
                        },
                        "name": "backend",
                        "ready": true,
                        "restartCount": 1,
                        "started": true,
                        "state": {
                            "running": {
                                "startedAt": "2024-12-16T09:18:17Z"
                            }
                        },
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-hzjfg",
                                "readOnly": true,
                                "recursiveReadOnly": "Disabled"
                            }
                        ]
                    }
                ],
                "hostIP": "172.16.1.204",
                "hostIPs": [
                    {
                        "ip": "172.16.1.204"
                    }
                ],
                "phase": "Running",
                "podIP": "192.168.138.117",
                "podIPs": [
                    {
                        "ip": "192.168.138.117"
                    }
                ],
                "qosClass": "BestEffort",
                "startTime": "2024-12-10T09:34:54Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "cni.projectcalico.org/containerID": "0b2ebedbc9fc66845fced035dfe204e397c6521d71101866a3b2a5660ed143f9",
                    "cni.projectcalico.org/podIP": "192.168.142.242/32",
                    "cni.projectcalico.org/podIPs": "192.168.142.242/32"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generateName": "frontend-deployment-7bb4fc6874-",
                "labels": {
                    "app": "frontend-deployment",
                    "pod-template-hash": "7bb4fc6874"
                },
                "name": "frontend-deployment-7bb4fc6874-qx5sg",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "frontend-deployment-7bb4fc6874",
                        "uid": "66909bdd-ed0c-4bc7-bc2a-52da79952db6"
                    }
                ],
                "resourceVersion": "3097014",
                "uid": "fe1ca3fe-3372-4651-87f3-3e308862e4bc"
            },
            "spec": {
                "containers": [
                    {
                        "image": "stehedor/finance-frontend-image",
                        "imagePullPolicy": "Always",
                        "name": "frontend-deployment",
                        "ports": [
                            {
                                "containerPort": 80,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-74rw8",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "enableServiceLinks": true,
                "nodeName": "kworker02.lab.local",
                "preemptionPolicy": "PreemptLowerPriority",
                "priority": 0,
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "kube-api-access-74rw8",
                        "projected": {
                            "defaultMode": 420,
                            "sources": [
                                {
                                    "serviceAccountToken": {
                                        "expirationSeconds": 3607,
                                        "path": "token"
                                    }
                                },
                                {
                                    "configMap": {
                                        "items": [
                                            {
                                                "key": "ca.crt",
                                                "path": "ca.crt"
                                            }
                                        ],
                                        "name": "kube-root-ca.crt"
                                    }
                                },
                                {
                                    "downwardAPI": {
                                        "items": [
                                            {
                                                "fieldRef": {
                                                    "apiVersion": "v1",
                                                    "fieldPath": "metadata.namespace"
                                                },
                                                "path": "namespace"
                                            }
                                        ]
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:57Z",
                        "status": "True",
                        "type": "PodReadyToStartContainers"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:57Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:57Z",
                        "status": "True",
                        "type": "ContainersReady"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "containerd://6b471e78d7a46cb75c4b4f352143661440802f8d589f81e32ee54c03cca68117",
                        "image": "docker.io/stehedor/finance-frontend-image:latest",
                        "imageID": "docker.io/stehedor/finance-frontend-image@sha256:ccbdff2a2e036d6fabd1f83010cfd246a0725942376273cd08fbc2af8020fb8c",
                        "lastState": {
                            "terminated": {
                                "containerID": "containerd://b82b4318ba87f8272d7e02217a19cf43bdb8f43648da7965769c2c1b969ddf1e",
                                "exitCode": 255,
                                "finishedAt": "2024-12-16T09:10:56Z",
                                "reason": "Unknown",
                                "startedAt": "2024-12-10T08:50:07Z"
                            }
                        },
                        "name": "frontend-deployment",
                        "ready": true,
                        "restartCount": 3,
                        "started": true,
                        "state": {
                            "running": {
                                "startedAt": "2024-12-16T09:18:57Z"
                            }
                        },
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-74rw8",
                                "readOnly": true,
                                "recursiveReadOnly": "Disabled"
                            }
                        ]
                    }
                ],
                "hostIP": "172.16.1.205",
                "hostIPs": [
                    {
                        "ip": "172.16.1.205"
                    }
                ],
                "phase": "Running",
                "podIP": "192.168.142.242",
                "podIPs": [
                    {
                        "ip": "192.168.142.242"
                    }
                ],
                "qosClass": "BestEffort",
                "startTime": "2024-11-28T08:23:46Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "cni.projectcalico.org/containerID": "514d8bd7e7011bbc3ea82990aa7039d39f290d29aa7da158cab4c16052680e55",
                    "cni.projectcalico.org/podIP": "192.168.138.71/32",
                    "cni.projectcalico.org/podIPs": "192.168.138.71/32"
                },
                "creationTimestamp": "2024-12-03T11:41:11Z",
                "generateName": "mongo-deployment-5bcb7cd78b-",
                "labels": {
                    "app": "mongo",
                    "pod-template-hash": "5bcb7cd78b"
                },
                "name": "mongo-deployment-5bcb7cd78b-gtjbk",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "mongo-deployment-5bcb7cd78b",
                        "uid": "ec5e9a91-ed9d-455d-ab28-0ed34953da30"
                    }
                ],
                "resourceVersion": "3096697",
                "uid": "108dea86-0a34-471f-bf7b-bbf4d40fb8db"
            },
            "spec": {
                "containers": [
                    {
                        "env": [
                            {
                                "name": "MONGO_INITDB_DATABASE",
                                "value": "financedb"
                            }
                        ],
                        "image": "mongo:5.0",
                        "imagePullPolicy": "IfNotPresent",
                        "name": "mongo",
                        "ports": [
                            {
                                "containerPort": 27017,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/data/db",
                                "name": "mongo-data"
                            },
                            {
                                "mountPath": "/docker-entrypoint-initdb.d/mongo-init.js",
                                "name": "mongo-init"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-59d4h",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "enableServiceLinks": true,
                "nodeName": "kworker01.lab.local",
                "preemptionPolicy": "PreemptLowerPriority",
                "priority": 0,
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "mongo-data",
                        "persistentVolumeClaim": {
                            "claimName": "mongo-pvc"
                        }
                    },
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "name": "mongo-init-config"
                        },
                        "name": "mongo-init"
                    },
                    {
                        "name": "kube-api-access-59d4h",
                        "projected": {
                            "defaultMode": 420,
                            "sources": [
                                {
                                    "serviceAccountToken": {
                                        "expirationSeconds": 3607,
                                        "path": "token"
                                    }
                                },
                                {
                                    "configMap": {
                                        "items": [
                                            {
                                                "key": "ca.crt",
                                                "path": "ca.crt"
                                            }
                                        ],
                                        "name": "kube-root-ca.crt"
                                    }
                                },
                                {
                                    "downwardAPI": {
                                        "items": [
                                            {
                                                "fieldRef": {
                                                    "apiVersion": "v1",
                                                    "fieldPath": "metadata.namespace"
                                                },
                                                "path": "namespace"
                                            }
                                        ]
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:15Z",
                        "status": "True",
                        "type": "PodReadyToStartContainers"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-03T11:41:11Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:15Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:18:15Z",
                        "status": "True",
                        "type": "ContainersReady"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-03T11:41:11Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "containerd://aa427a69a8880d82e13e858e585dbeee07660b7e8273c483d8bd1629d4c9cb5f",
                        "image": "docker.io/library/mongo:5.0",
                        "imageID": "docker.io/library/mongo@sha256:e60ff56a306e6d9b6c0bd91800533cbc6863254b5aa510a06e56290d4866cdab",
                        "lastState": {
                            "terminated": {
                                "containerID": "containerd://63c63702be2a2860c098125e1895923f9f37d9281db302f0dc494c0de3981bf8",
                                "exitCode": 255,
                                "finishedAt": "2024-12-16T09:10:50Z",
                                "reason": "Unknown",
                                "startedAt": "2024-12-10T08:50:06Z"
                            }
                        },
                        "name": "mongo",
                        "ready": true,
                        "restartCount": 2,
                        "started": true,
                        "state": {
                            "running": {
                                "startedAt": "2024-12-16T09:18:15Z"
                            }
                        },
                        "volumeMounts": [
                            {
                                "mountPath": "/data/db",
                                "name": "mongo-data"
                            },
                            {
                                "mountPath": "/docker-entrypoint-initdb.d/mongo-init.js",
                                "name": "mongo-init"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-59d4h",
                                "readOnly": true,
                                "recursiveReadOnly": "Disabled"
                            }
                        ]
                    }
                ],
                "hostIP": "172.16.1.204",
                "hostIPs": [
                    {
                        "ip": "172.16.1.204"
                    }
                ],
                "phase": "Running",
                "podIP": "192.168.138.71",
                "podIPs": [
                    {
                        "ip": "192.168.138.71"
                    }
                ],
                "qosClass": "BestEffort",
                "startTime": "2024-12-03T11:41:11Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "cni.projectcalico.org/containerID": "81dfbd51f865a66d2e7a9b988804fc182602f932e09a8077a7ac8c98f2bbe702",
                    "cni.projectcalico.org/podIP": "192.168.142.244/32",
                    "cni.projectcalico.org/podIPs": "192.168.142.244/32"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generateName": "mysql-finances-deployment-77884f9658-",
                "labels": {
                    "app": "mysql-finances",
                    "pod-template-hash": "77884f9658"
                },
                "name": "mysql-finances-deployment-77884f9658-jlmx4",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "mysql-finances-deployment-77884f9658",
                        "uid": "5549d339-65b6-4984-a06b-a8792221aaa1"
                    }
                ],
                "resourceVersion": "3097035",
                "uid": "929e09ab-88c6-47b9-a4da-a481b7f1ac5a"
            },
            "spec": {
                "containers": [
                    {
                        "env": [
                            {
                                "name": "MYSQL_ROOT_PASSWORD",
                                "value": "password"
                            },
                            {
                                "name": "MYSQL_DATABASE",
                                "value": "financedb"
                            }
                        ],
                        "image": "mysql:8.0",
                        "imagePullPolicy": "IfNotPresent",
                        "lifecycle": {
                            "postStart": {
                                "exec": {
                                    "command": [
                                        "sh",
                                        "-c",
                                        "while ! mysqladmin ping -h 127.0.0.1 --silent; do sleep 2; done; mysql -u root -ppassword financedb \u003c /docker-entrypoint-initdb.d/mysql-finances-init.sql"
                                    ]
                                }
                            }
                        },
                        "name": "mysql-finances",
                        "ports": [
                            {
                                "containerPort": 3306,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/mysql",
                                "name": "mysql-data-finances"
                            },
                            {
                                "mountPath": "/docker-entrypoint-initdb.d",
                                "name": "mysql-finances-init"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-xtwpd",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "enableServiceLinks": true,
                "nodeName": "kworker02.lab.local",
                "preemptionPolicy": "PreemptLowerPriority",
                "priority": 0,
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "mysql-data-finances",
                        "persistentVolumeClaim": {
                            "claimName": "mysql-finances-pvc"
                        }
                    },
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "items": [
                                {
                                    "key": "mysql-finances-init.sql",
                                    "path": "mysql-finances-init.sql"
                                }
                            ],
                            "name": "mysql-finances-init-config"
                        },
                        "name": "mysql-finances-init"
                    },
                    {
                        "name": "kube-api-access-xtwpd",
                        "projected": {
                            "defaultMode": 420,
                            "sources": [
                                {
                                    "serviceAccountToken": {
                                        "expirationSeconds": 3607,
                                        "path": "token"
                                    }
                                },
                                {
                                    "configMap": {
                                        "items": [
                                            {
                                                "key": "ca.crt",
                                                "path": "ca.crt"
                                            }
                                        ],
                                        "name": "kube-root-ca.crt"
                                    }
                                },
                                {
                                    "downwardAPI": {
                                        "items": [
                                            {
                                                "fieldRef": {
                                                    "apiVersion": "v1",
                                                    "fieldPath": "metadata.namespace"
                                                },
                                                "path": "namespace"
                                            }
                                        ]
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:19:00Z",
                        "status": "True",
                        "type": "PodReadyToStartContainers"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:19:00Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:19:00Z",
                        "status": "True",
                        "type": "ContainersReady"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "containerd://b7390cb9e54d4737d0d757fa3e7164d381ec81c3b7091dc9796fccd64dfd2624",
                        "image": "docker.io/library/mysql:8.0",
                        "imageID": "docker.io/library/mysql@sha256:d58ac93387f644e4e040c636b8f50494e78e5afc27ca0a87348b2f577da2b7ff",
                        "lastState": {
                            "terminated": {
                                "containerID": "containerd://633cfc8c978a1d3e9e3091d775a0f1f1f37673b21662227341f8743687637c59",
                                "exitCode": 255,
                                "finishedAt": "2024-12-16T09:10:56Z",
                                "reason": "Unknown",
                                "startedAt": "2024-12-10T08:50:10Z"
                            }
                        },
                        "name": "mysql-finances",
                        "ready": true,
                        "restartCount": 3,
                        "started": true,
                        "state": {
                            "running": {
                                "startedAt": "2024-12-16T09:18:58Z"
                            }
                        },
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/mysql",
                                "name": "mysql-data-finances"
                            },
                            {
                                "mountPath": "/docker-entrypoint-initdb.d",
                                "name": "mysql-finances-init"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-xtwpd",
                                "readOnly": true,
                                "recursiveReadOnly": "Disabled"
                            }
                        ]
                    }
                ],
                "hostIP": "172.16.1.205",
                "hostIPs": [
                    {
                        "ip": "172.16.1.205"
                    }
                ],
                "phase": "Running",
                "podIP": "192.168.142.244",
                "podIPs": [
                    {
                        "ip": "192.168.142.244"
                    }
                ],
                "qosClass": "BestEffort",
                "startTime": "2024-11-28T08:23:46Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "cni.projectcalico.org/containerID": "9a2549224714ca276e92908ff7d25dc3d550d1224ba6a37a06debb63ff118ed8",
                    "cni.projectcalico.org/podIP": "192.168.142.240/32",
                    "cni.projectcalico.org/podIPs": "192.168.142.240/32"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generateName": "mysql-users-deployment-b7c4ff976-",
                "labels": {
                    "app": "mysql-users",
                    "pod-template-hash": "b7c4ff976"
                },
                "name": "mysql-users-deployment-b7c4ff976-nrcj8",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "mysql-users-deployment-b7c4ff976",
                        "uid": "bb063a04-c850-41ab-ab7a-594eeda391df"
                    }
                ],
                "resourceVersion": "3097048",
                "uid": "475152e8-2b99-4518-9392-1406198bcfb8"
            },
            "spec": {
                "containers": [
                    {
                        "env": [
                            {
                                "name": "MYSQL_ROOT_PASSWORD",
                                "value": "password"
                            },
                            {
                                "name": "MYSQL_DATABASE",
                                "value": "userdb"
                            }
                        ],
                        "image": "mysql:8.0",
                        "imagePullPolicy": "IfNotPresent",
                        "lifecycle": {
                            "postStart": {
                                "exec": {
                                    "command": [
                                        "sh",
                                        "-c",
                                        "while ! mysqladmin ping -h 127.0.0.1 --silent; do sleep 2; done \u0026\u0026 mysql -u root -ppassword userdb \u003c /docker-entrypoint-initdb.d/mysql-users-init.sql"
                                    ]
                                }
                            }
                        },
                        "name": "mysql-users",
                        "ports": [
                            {
                                "containerPort": 3306,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/mysql",
                                "name": "mysql-data-users"
                            },
                            {
                                "mountPath": "/docker-entrypoint-initdb.d",
                                "name": "mysql-users-init"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-m9r4t",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "enableServiceLinks": true,
                "nodeName": "kworker02.lab.local",
                "preemptionPolicy": "PreemptLowerPriority",
                "priority": 0,
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "mysql-data-users",
                        "persistentVolumeClaim": {
                            "claimName": "mysql-users-pvc"
                        }
                    },
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "items": [
                                {
                                    "key": "mysql-users-init.sql",
                                    "path": "mysql-users-init.sql"
                                }
                            ],
                            "name": "mysql-users-init-config"
                        },
                        "name": "mysql-users-init"
                    },
                    {
                        "name": "kube-api-access-m9r4t",
                        "projected": {
                            "defaultMode": 420,
                            "sources": [
                                {
                                    "serviceAccountToken": {
                                        "expirationSeconds": 3607,
                                        "path": "token"
                                    }
                                },
                                {
                                    "configMap": {
                                        "items": [
                                            {
                                                "key": "ca.crt",
                                                "path": "ca.crt"
                                            }
                                        ],
                                        "name": "kube-root-ca.crt"
                                    }
                                },
                                {
                                    "downwardAPI": {
                                        "items": [
                                            {
                                                "fieldRef": {
                                                    "apiVersion": "v1",
                                                    "fieldPath": "metadata.namespace"
                                                },
                                                "path": "namespace"
                                            }
                                        ]
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:19:01Z",
                        "status": "True",
                        "type": "PodReadyToStartContainers"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:19:01Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-12-16T09:19:01Z",
                        "status": "True",
                        "type": "ContainersReady"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "containerd://ac19308ef50d12b55ca289150e3743a93a76f7a51a269fa445fb7d98c53e7cd7",
                        "image": "docker.io/library/mysql:8.0",
                        "imageID": "docker.io/library/mysql@sha256:d58ac93387f644e4e040c636b8f50494e78e5afc27ca0a87348b2f577da2b7ff",
                        "lastState": {
                            "terminated": {
                                "containerID": "containerd://fdd048b3e71624a2464403e318caa496e73bf1fe174d82c3b44e9d3989ed2e50",
                                "exitCode": 255,
                                "finishedAt": "2024-12-16T09:10:56Z",
                                "reason": "Unknown",
                                "startedAt": "2024-12-10T08:50:07Z"
                            }
                        },
                        "name": "mysql-users",
                        "ready": true,
                        "restartCount": 3,
                        "started": true,
                        "state": {
                            "running": {
                                "startedAt": "2024-12-16T09:18:56Z"
                            }
                        },
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/mysql",
                                "name": "mysql-data-users"
                            },
                            {
                                "mountPath": "/docker-entrypoint-initdb.d",
                                "name": "mysql-users-init"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-api-access-m9r4t",
                                "readOnly": true,
                                "recursiveReadOnly": "Disabled"
                            }
                        ]
                    }
                ],
                "hostIP": "172.16.1.205",
                "hostIPs": [
                    {
                        "ip": "172.16.1.205"
                    }
                ],
                "phase": "Running",
                "podIP": "192.168.142.240",
                "podIPs": [
                    {
                        "ip": "192.168.142.240"
                    }
                ],
                "qosClass": "BestEffort",
                "startTime": "2024-11-28T08:23:46Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Service",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"name\":\"app-backend\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"port\":5000,\"protocol\":\"TCP\",\"targetPort\":5000}],\"selector\":{\"app\":\"backend\"}}}\n"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "name": "app-backend",
                "namespace": "default",
                "resourceVersion": "1389859",
                "uid": "ce700436-2d65-4689-9358-52ee7b578f63"
            },
            "spec": {
                "clusterIP": "10.111.189.56",
                "clusterIPs": [
                    "10.111.189.56"
                ],
                "internalTrafficPolicy": "Cluster",
                "ipFamilies": [
                    "IPv4"
                ],
                "ipFamilyPolicy": "SingleStack",
                "ports": [
                    {
                        "port": 5000,
                        "protocol": "TCP",
                        "targetPort": 5000
                    }
                ],
                "selector": {
                    "app": "backend"
                },
                "sessionAffinity": "None",
                "type": "ClusterIP"
            },
            "status": {
                "loadBalancer": {}
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Service",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"app\":\"frontend-deployment\",\"service\":\"frontend-deployment\"},\"name\":\"frontend-service\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80}],\"selector\":{\"app\":\"frontend-deployment\"},\"type\":\"LoadBalancer\"}}\n"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "labels": {
                    "app": "frontend-deployment",
                    "service": "frontend-deployment"
                },
                "name": "frontend-service",
                "namespace": "default",
                "resourceVersion": "1389874",
                "uid": "2683597f-8069-48ed-bbc6-030e827c094c"
            },
            "spec": {
                "allocateLoadBalancerNodePorts": true,
                "clusterIP": "10.110.117.245",
                "clusterIPs": [
                    "10.110.117.245"
                ],
                "externalTrafficPolicy": "Cluster",
                "internalTrafficPolicy": "Cluster",
                "ipFamilies": [
                    "IPv4"
                ],
                "ipFamilyPolicy": "SingleStack",
                "ports": [
                    {
                        "name": "http",
                        "nodePort": 31790,
                        "port": 80,
                        "protocol": "TCP",
                        "targetPort": 80
                    }
                ],
                "selector": {
                    "app": "frontend-deployment"
                },
                "sessionAffinity": "None",
                "type": "LoadBalancer"
            },
            "status": {
                "loadBalancer": {
                    "ingress": [
                        {
                            "ip": "172.16.1.209",
                            "ipMode": "VIP"
                        }
                    ]
                }
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Service",
            "metadata": {
                "creationTimestamp": "2024-11-25T12:47:21Z",
                "labels": {
                    "component": "apiserver",
                    "provider": "kubernetes"
                },
                "name": "kubernetes",
                "namespace": "default",
                "resourceVersion": "834897",
                "uid": "55676904-d3c9-4d36-8e04-a5d7183a7c24"
            },
            "spec": {
                "clusterIP": "10.96.0.1",
                "clusterIPs": [
                    "10.96.0.1"
                ],
                "internalTrafficPolicy": "Cluster",
                "ipFamilies": [
                    "IPv4"
                ],
                "ipFamilyPolicy": "SingleStack",
                "ports": [
                    {
                        "name": "https",
                        "port": 443,
                        "protocol": "TCP",
                        "targetPort": 6443
                    }
                ],
                "sessionAffinity": "None",
                "type": "ClusterIP"
            },
            "status": {
                "loadBalancer": {}
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Service",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"name\":\"mongodb-service\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"port\":27017,\"protocol\":\"TCP\",\"targetPort\":27017}],\"selector\":{\"app\":\"mongo\"}}}\n"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "name": "mongodb-service",
                "namespace": "default",
                "resourceVersion": "1389794",
                "uid": "0977eb3f-1344-4417-a1fa-64ce9e0db301"
            },
            "spec": {
                "clusterIP": "10.107.69.75",
                "clusterIPs": [
                    "10.107.69.75"
                ],
                "internalTrafficPolicy": "Cluster",
                "ipFamilies": [
                    "IPv4"
                ],
                "ipFamilyPolicy": "SingleStack",
                "ports": [
                    {
                        "port": 27017,
                        "protocol": "TCP",
                        "targetPort": 27017
                    }
                ],
                "selector": {
                    "app": "mongo"
                },
                "sessionAffinity": "None",
                "type": "ClusterIP"
            },
            "status": {
                "loadBalancer": {}
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Service",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"name\":\"mysql-finances\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"port\":3306,\"protocol\":\"TCP\",\"targetPort\":3306}],\"selector\":{\"app\":\"mysql-finances\"}}}\n"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "name": "mysql-finances",
                "namespace": "default",
                "resourceVersion": "1389812",
                "uid": "aba0ce0b-f6b6-4add-a891-f754aa766687"
            },
            "spec": {
                "clusterIP": "10.110.71.49",
                "clusterIPs": [
                    "10.110.71.49"
                ],
                "internalTrafficPolicy": "Cluster",
                "ipFamilies": [
                    "IPv4"
                ],
                "ipFamilyPolicy": "SingleStack",
                "ports": [
                    {
                        "port": 3306,
                        "protocol": "TCP",
                        "targetPort": 3306
                    }
                ],
                "selector": {
                    "app": "mysql-finances"
                },
                "sessionAffinity": "None",
                "type": "ClusterIP"
            },
            "status": {
                "loadBalancer": {}
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Service",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"name\":\"mysql-users\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"port\":3306,\"protocol\":\"TCP\",\"targetPort\":3306}],\"selector\":{\"app\":\"mysql-users\"}}}\n"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "name": "mysql-users",
                "namespace": "default",
                "resourceVersion": "1389823",
                "uid": "da8ef8f9-c843-49df-b5ba-01c8bf2d1caa"
            },
            "spec": {
                "clusterIP": "10.111.227.215",
                "clusterIPs": [
                    "10.111.227.215"
                ],
                "internalTrafficPolicy": "Cluster",
                "ipFamilies": [
                    "IPv4"
                ],
                "ipFamilyPolicy": "SingleStack",
                "ports": [
                    {
                        "port": 3306,
                        "protocol": "TCP",
                        "targetPort": 3306
                    }
                ],
                "selector": {
                    "app": "mysql-users"
                },
                "sessionAffinity": "None",
                "type": "ClusterIP"
            },
            "status": {
                "loadBalancer": {}
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "Deployment",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/revision": "1",
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"name\":\"backend-deployment\",\"namespace\":\"default\"},\"spec\":{\"replicas\":2,\"selector\":{\"matchLabels\":{\"app\":\"backend\"}},\"template\":{\"metadata\":{\"labels\":{\"app\":\"backend\"}},\"spec\":{\"containers\":[{\"env\":[{\"name\":\"MONGO_URI\",\"value\":\"mongodb://mongodb-service:27017/\"},{\"name\":\"MYSQL_HOST\",\"value\": [...]
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 2,
                "name": "backend-deployment",
                "namespace": "default",
                "resourceVersion": "3096994",
                "uid": "7445c239-1cf0-48ca-b14b-a41c99304e56"
            },
            "spec": {
                "progressDeadlineSeconds": 600,
                "replicas": 2,
                "revisionHistoryLimit": 10,
                "selector": {
                    "matchLabels": {
                        "app": "backend"
                    }
                },
                "strategy": {
                    "rollingUpdate": {
                        "maxSurge": "25%",
                        "maxUnavailable": "25%"
                    },
                    "type": "RollingUpdate"
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "backend"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MONGO_URI",
                                        "value": "mongodb://mongodb-service:27017/"
                                    },
                                    {
                                        "name": "MYSQL_HOST",
                                        "value": "mysql-finances"
                                    },
                                    {
                                        "name": "MYSQL_USER",
                                        "value": "root"
                                    },
                                    {
                                        "name": "MYSQL_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_DATABASE",
                                        "value": "financedb"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_HOST",
                                        "value": "mysql-users"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_USER",
                                        "value": "root"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_DATABASE",
                                        "value": "userdb"
                                    }
                                ],
                                "image": "stehedor/finance-backend-image",
                                "imagePullPolicy": "Always",
                                "name": "backend",
                                "ports": [
                                    {
                                        "containerPort": 5000,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File"
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30
                    }
                }
            },
            "status": {
                "availableReplicas": 2,
                "conditions": [
                    {
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "lastUpdateTime": "2024-11-28T08:23:51Z",
                        "message": "ReplicaSet \"backend-deployment-5dbb6ddd9d\" has successfully progressed.",
                        "reason": "NewReplicaSetAvailable",
                        "status": "True",
                        "type": "Progressing"
                    },
                    {
                        "lastTransitionTime": "2024-12-16T09:18:56Z",
                        "lastUpdateTime": "2024-12-16T09:18:56Z",
                        "message": "Deployment has minimum availability.",
                        "reason": "MinimumReplicasAvailable",
                        "status": "True",
                        "type": "Available"
                    }
                ],
                "observedGeneration": 2,
                "readyReplicas": 2,
                "replicas": 2,
                "updatedReplicas": 2
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "Deployment",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/revision": "1",
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"labels\":{\"app\":\"frontend-deployment\"},\"name\":\"frontend-deployment\",\"namespace\":\"default\"},\"spec\":{\"replicas\":1,\"selector\":{\"matchLabels\":{\"app\":\"frontend-deployment\"}},\"template\":{\"metadata\":{\"labels\":{\"app\":\"frontend-deployment\"}},\"spec\":{\"containers\":[{\"image\":\"stehedor/finance-frontend-image\", [...]
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 1,
                "labels": {
                    "app": "frontend-deployment"
                },
                "name": "frontend-deployment",
                "namespace": "default",
                "resourceVersion": "3097022",
                "uid": "31a71913-f47a-44e0-b20d-0f2ffcdd12b8"
            },
            "spec": {
                "progressDeadlineSeconds": 600,
                "replicas": 1,
                "revisionHistoryLimit": 10,
                "selector": {
                    "matchLabels": {
                        "app": "frontend-deployment"
                    }
                },
                "strategy": {
                    "rollingUpdate": {
                        "maxSurge": "25%",
                        "maxUnavailable": "25%"
                    },
                    "type": "RollingUpdate"
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "frontend-deployment"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "image": "stehedor/finance-frontend-image",
                                "imagePullPolicy": "Always",
                                "name": "frontend-deployment",
                                "ports": [
                                    {
                                        "containerPort": 80,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File"
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "conditions": [
                    {
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "lastUpdateTime": "2024-11-28T08:23:53Z",
                        "message": "ReplicaSet \"frontend-deployment-7bb4fc6874\" has successfully progressed.",
                        "reason": "NewReplicaSetAvailable",
                        "status": "True",
                        "type": "Progressing"
                    },
                    {
                        "lastTransitionTime": "2024-12-16T09:18:57Z",
                        "lastUpdateTime": "2024-12-16T09:18:57Z",
                        "message": "Deployment has minimum availability.",
                        "reason": "MinimumReplicasAvailable",
                        "status": "True",
                        "type": "Available"
                    }
                ],
                "observedGeneration": 1,
                "readyReplicas": 1,
                "replicas": 1,
                "updatedReplicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "Deployment",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/revision": "1",
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"name\":\"mongo-deployment\",\"namespace\":\"default\"},\"spec\":{\"replicas\":1,\"selector\":{\"matchLabels\":{\"app\":\"mongo\"}},\"template\":{\"metadata\":{\"labels\":{\"app\":\"mongo\"}},\"spec\":{\"containers\":[{\"env\":[{\"name\":\"MONGO_INITDB_DATABASE\",\"value\":\"financedb\"}],\"image\":\"mongo:5.0\",\"name\":\"mongo\",\"ports\ [...]
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 3,
                "name": "mongo-deployment",
                "namespace": "default",
                "resourceVersion": "3096701",
                "uid": "91086c75-ba1b-4804-ba6b-01779f8982c8"
            },
            "spec": {
                "progressDeadlineSeconds": 600,
                "replicas": 1,
                "revisionHistoryLimit": 10,
                "selector": {
                    "matchLabels": {
                        "app": "mongo"
                    }
                },
                "strategy": {
                    "rollingUpdate": {
                        "maxSurge": "25%",
                        "maxUnavailable": "25%"
                    },
                    "type": "RollingUpdate"
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "mongo"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MONGO_INITDB_DATABASE",
                                        "value": "financedb"
                                    }
                                ],
                                "image": "mongo:5.0",
                                "imagePullPolicy": "IfNotPresent",
                                "name": "mongo",
                                "ports": [
                                    {
                                        "containerPort": 27017,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File",
                                "volumeMounts": [
                                    {
                                        "mountPath": "/data/db",
                                        "name": "mongo-data"
                                    },
                                    {
                                        "mountPath": "/docker-entrypoint-initdb.d/mongo-init.js",
                                        "name": "mongo-init"
                                    }
                                ]
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30,
                        "volumes": [
                            {
                                "name": "mongo-data",
                                "persistentVolumeClaim": {
                                    "claimName": "mongo-pvc"
                                }
                            },
                            {
                                "configMap": {
                                    "defaultMode": 420,
                                    "name": "mongo-init-config"
                                },
                                "name": "mongo-init"
                            }
                        ]
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "conditions": [
                    {
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "lastUpdateTime": "2024-11-28T08:23:48Z",
                        "message": "ReplicaSet \"mongo-deployment-5bcb7cd78b\" has successfully progressed.",
                        "reason": "NewReplicaSetAvailable",
                        "status": "True",
                        "type": "Progressing"
                    },
                    {
                        "lastTransitionTime": "2024-12-16T09:18:15Z",
                        "lastUpdateTime": "2024-12-16T09:18:15Z",
                        "message": "Deployment has minimum availability.",
                        "reason": "MinimumReplicasAvailable",
                        "status": "True",
                        "type": "Available"
                    }
                ],
                "observedGeneration": 3,
                "readyReplicas": 1,
                "replicas": 1,
                "updatedReplicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "Deployment",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/revision": "1",
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"name\":\"mysql-finances-deployment\",\"namespace\":\"default\"},\"spec\":{\"replicas\":1,\"selector\":{\"matchLabels\":{\"app\":\"mysql-finances\"}},\"template\":{\"metadata\":{\"labels\":{\"app\":\"mysql-finances\"}},\"spec\":{\"containers\":[{\"env\":[{\"name\":\"MYSQL_ROOT_PASSWORD\",\"value\":\"password\"},{\"name\":\"MYSQL_DATABASE\" [...]
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 1,
                "name": "mysql-finances-deployment",
                "namespace": "default",
                "resourceVersion": "3097039",
                "uid": "7defe3b7-8051-4826-9496-5fd699ee0f36"
            },
            "spec": {
                "progressDeadlineSeconds": 600,
                "replicas": 1,
                "revisionHistoryLimit": 10,
                "selector": {
                    "matchLabels": {
                        "app": "mysql-finances"
                    }
                },
                "strategy": {
                    "rollingUpdate": {
                        "maxSurge": "25%",
                        "maxUnavailable": "25%"
                    },
                    "type": "RollingUpdate"
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "mysql-finances"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MYSQL_ROOT_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_DATABASE",
                                        "value": "financedb"
                                    }
                                ],
                                "image": "mysql:8.0",
                                "imagePullPolicy": "IfNotPresent",
                                "lifecycle": {
                                    "postStart": {
                                        "exec": {
                                            "command": [
                                                "sh",
                                                "-c",
                                                "while ! mysqladmin ping -h 127.0.0.1 --silent; do sleep 2; done; mysql -u root -ppassword financedb \u003c /docker-entrypoint-initdb.d/mysql-finances-init.sql"
                                            ]
                                        }
                                    }
                                },
                                "name": "mysql-finances",
                                "ports": [
                                    {
                                        "containerPort": 3306,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File",
                                "volumeMounts": [
                                    {
                                        "mountPath": "/var/lib/mysql",
                                        "name": "mysql-data-finances"
                                    },
                                    {
                                        "mountPath": "/docker-entrypoint-initdb.d",
                                        "name": "mysql-finances-init"
                                    }
                                ]
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30,
                        "volumes": [
                            {
                                "name": "mysql-data-finances",
                                "persistentVolumeClaim": {
                                    "claimName": "mysql-finances-pvc"
                                }
                            },
                            {
                                "configMap": {
                                    "defaultMode": 420,
                                    "items": [
                                        {
                                            "key": "mysql-finances-init.sql",
                                            "path": "mysql-finances-init.sql"
                                        }
                                    ],
                                    "name": "mysql-finances-init-config"
                                },
                                "name": "mysql-finances-init"
                            }
                        ]
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "conditions": [
                    {
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "lastUpdateTime": "2024-11-28T08:23:53Z",
                        "message": "ReplicaSet \"mysql-finances-deployment-77884f9658\" has successfully progressed.",
                        "reason": "NewReplicaSetAvailable",
                        "status": "True",
                        "type": "Progressing"
                    },
                    {
                        "lastTransitionTime": "2024-12-16T09:19:00Z",
                        "lastUpdateTime": "2024-12-16T09:19:00Z",
                        "message": "Deployment has minimum availability.",
                        "reason": "MinimumReplicasAvailable",
                        "status": "True",
                        "type": "Available"
                    }
                ],
                "observedGeneration": 1,
                "readyReplicas": 1,
                "replicas": 1,
                "updatedReplicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "Deployment",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/revision": "1",
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"name\":\"mysql-users-deployment\",\"namespace\":\"default\"},\"spec\":{\"replicas\":1,\"selector\":{\"matchLabels\":{\"app\":\"mysql-users\"}},\"template\":{\"metadata\":{\"labels\":{\"app\":\"mysql-users\"}},\"spec\":{\"containers\":[{\"env\":[{\"name\":\"MYSQL_ROOT_PASSWORD\",\"value\":\"password\"},{\"name\":\"MYSQL_DATABASE\",\"value\ [...]
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 1,
                "name": "mysql-users-deployment",
                "namespace": "default",
                "resourceVersion": "3097052",
                "uid": "6087e2e8-daae-4186-baf0-ba580b368bb0"
            },
            "spec": {
                "progressDeadlineSeconds": 600,
                "replicas": 1,
                "revisionHistoryLimit": 10,
                "selector": {
                    "matchLabels": {
                        "app": "mysql-users"
                    }
                },
                "strategy": {
                    "rollingUpdate": {
                        "maxSurge": "25%",
                        "maxUnavailable": "25%"
                    },
                    "type": "RollingUpdate"
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "mysql-users"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MYSQL_ROOT_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_DATABASE",
                                        "value": "userdb"
                                    }
                                ],
                                "image": "mysql:8.0",
                                "imagePullPolicy": "IfNotPresent",
                                "lifecycle": {
                                    "postStart": {
                                        "exec": {
                                            "command": [
                                                "sh",
                                                "-c",
                                                "while ! mysqladmin ping -h 127.0.0.1 --silent; do sleep 2; done \u0026\u0026 mysql -u root -ppassword userdb \u003c /docker-entrypoint-initdb.d/mysql-users-init.sql"
                                            ]
                                        }
                                    }
                                },
                                "name": "mysql-users",
                                "ports": [
                                    {
                                        "containerPort": 3306,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File",
                                "volumeMounts": [
                                    {
                                        "mountPath": "/var/lib/mysql",
                                        "name": "mysql-data-users"
                                    },
                                    {
                                        "mountPath": "/docker-entrypoint-initdb.d",
                                        "name": "mysql-users-init"
                                    }
                                ]
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30,
                        "volumes": [
                            {
                                "name": "mysql-data-users",
                                "persistentVolumeClaim": {
                                    "claimName": "mysql-users-pvc"
                                }
                            },
                            {
                                "configMap": {
                                    "defaultMode": 420,
                                    "items": [
                                        {
                                            "key": "mysql-users-init.sql",
                                            "path": "mysql-users-init.sql"
                                        }
                                    ],
                                    "name": "mysql-users-init-config"
                                },
                                "name": "mysql-users-init"
                            }
                        ]
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "conditions": [
                    {
                        "lastTransitionTime": "2024-11-28T08:23:46Z",
                        "lastUpdateTime": "2024-11-28T08:23:53Z",
                        "message": "ReplicaSet \"mysql-users-deployment-b7c4ff976\" has successfully progressed.",
                        "reason": "NewReplicaSetAvailable",
                        "status": "True",
                        "type": "Progressing"
                    },
                    {
                        "lastTransitionTime": "2024-12-16T09:19:01Z",
                        "lastUpdateTime": "2024-12-16T09:19:01Z",
                        "message": "Deployment has minimum availability.",
                        "reason": "MinimumReplicasAvailable",
                        "status": "True",
                        "type": "Available"
                    }
                ],
                "observedGeneration": 1,
                "readyReplicas": 1,
                "replicas": 1,
                "updatedReplicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "ReplicaSet",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/desired-replicas": "2",
                    "deployment.kubernetes.io/max-replicas": "3",
                    "deployment.kubernetes.io/revision": "1"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 2,
                "labels": {
                    "app": "backend",
                    "pod-template-hash": "5dbb6ddd9d"
                },
                "name": "backend-deployment-5dbb6ddd9d",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "Deployment",
                        "name": "backend-deployment",
                        "uid": "7445c239-1cf0-48ca-b14b-a41c99304e56"
                    }
                ],
                "resourceVersion": "3096993",
                "uid": "f94f3549-eaa2-419b-9b7a-689280367c98"
            },
            "spec": {
                "replicas": 2,
                "selector": {
                    "matchLabels": {
                        "app": "backend",
                        "pod-template-hash": "5dbb6ddd9d"
                    }
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "backend",
                            "pod-template-hash": "5dbb6ddd9d"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MONGO_URI",
                                        "value": "mongodb://mongodb-service:27017/"
                                    },
                                    {
                                        "name": "MYSQL_HOST",
                                        "value": "mysql-finances"
                                    },
                                    {
                                        "name": "MYSQL_USER",
                                        "value": "root"
                                    },
                                    {
                                        "name": "MYSQL_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_DATABASE",
                                        "value": "financedb"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_HOST",
                                        "value": "mysql-users"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_USER",
                                        "value": "root"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_USERDB_DATABASE",
                                        "value": "userdb"
                                    }
                                ],
                                "image": "stehedor/finance-backend-image",
                                "imagePullPolicy": "Always",
                                "name": "backend",
                                "ports": [
                                    {
                                        "containerPort": 5000,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File"
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30
                    }
                }
            },
            "status": {
                "availableReplicas": 2,
                "fullyLabeledReplicas": 2,
                "observedGeneration": 2,
                "readyReplicas": 2,
                "replicas": 2
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "ReplicaSet",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/desired-replicas": "1",
                    "deployment.kubernetes.io/max-replicas": "2",
                    "deployment.kubernetes.io/revision": "1"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 1,
                "labels": {
                    "app": "frontend-deployment",
                    "pod-template-hash": "7bb4fc6874"
                },
                "name": "frontend-deployment-7bb4fc6874",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "Deployment",
                        "name": "frontend-deployment",
                        "uid": "31a71913-f47a-44e0-b20d-0f2ffcdd12b8"
                    }
                ],
                "resourceVersion": "3097017",
                "uid": "66909bdd-ed0c-4bc7-bc2a-52da79952db6"
            },
            "spec": {
                "replicas": 1,
                "selector": {
                    "matchLabels": {
                        "app": "frontend-deployment",
                        "pod-template-hash": "7bb4fc6874"
                    }
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "frontend-deployment",
                            "pod-template-hash": "7bb4fc6874"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "image": "stehedor/finance-frontend-image",
                                "imagePullPolicy": "Always",
                                "name": "frontend-deployment",
                                "ports": [
                                    {
                                        "containerPort": 80,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File"
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "fullyLabeledReplicas": 1,
                "observedGeneration": 1,
                "readyReplicas": 1,
                "replicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "ReplicaSet",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/desired-replicas": "1",
                    "deployment.kubernetes.io/max-replicas": "2",
                    "deployment.kubernetes.io/revision": "1"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 3,
                "labels": {
                    "app": "mongo",
                    "pod-template-hash": "5bcb7cd78b"
                },
                "name": "mongo-deployment-5bcb7cd78b",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "Deployment",
                        "name": "mongo-deployment",
                        "uid": "91086c75-ba1b-4804-ba6b-01779f8982c8"
                    }
                ],
                "resourceVersion": "3096700",
                "uid": "ec5e9a91-ed9d-455d-ab28-0ed34953da30"
            },
            "spec": {
                "replicas": 1,
                "selector": {
                    "matchLabels": {
                        "app": "mongo",
                        "pod-template-hash": "5bcb7cd78b"
                    }
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "mongo",
                            "pod-template-hash": "5bcb7cd78b"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MONGO_INITDB_DATABASE",
                                        "value": "financedb"
                                    }
                                ],
                                "image": "mongo:5.0",
                                "imagePullPolicy": "IfNotPresent",
                                "name": "mongo",
                                "ports": [
                                    {
                                        "containerPort": 27017,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File",
                                "volumeMounts": [
                                    {
                                        "mountPath": "/data/db",
                                        "name": "mongo-data"
                                    },
                                    {
                                        "mountPath": "/docker-entrypoint-initdb.d/mongo-init.js",
                                        "name": "mongo-init"
                                    }
                                ]
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30,
                        "volumes": [
                            {
                                "name": "mongo-data",
                                "persistentVolumeClaim": {
                                    "claimName": "mongo-pvc"
                                }
                            },
                            {
                                "configMap": {
                                    "defaultMode": 420,
                                    "name": "mongo-init-config"
                                },
                                "name": "mongo-init"
                            }
                        ]
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "fullyLabeledReplicas": 1,
                "observedGeneration": 3,
                "readyReplicas": 1,
                "replicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "ReplicaSet",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/desired-replicas": "1",
                    "deployment.kubernetes.io/max-replicas": "2",
                    "deployment.kubernetes.io/revision": "1"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 1,
                "labels": {
                    "app": "mysql-finances",
                    "pod-template-hash": "77884f9658"
                },
                "name": "mysql-finances-deployment-77884f9658",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "Deployment",
                        "name": "mysql-finances-deployment",
                        "uid": "7defe3b7-8051-4826-9496-5fd699ee0f36"
                    }
                ],
                "resourceVersion": "3097038",
                "uid": "5549d339-65b6-4984-a06b-a8792221aaa1"
            },
            "spec": {
                "replicas": 1,
                "selector": {
                    "matchLabels": {
                        "app": "mysql-finances",
                        "pod-template-hash": "77884f9658"
                    }
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "mysql-finances",
                            "pod-template-hash": "77884f9658"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MYSQL_ROOT_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_DATABASE",
                                        "value": "financedb"
                                    }
                                ],
                                "image": "mysql:8.0",
                                "imagePullPolicy": "IfNotPresent",
                                "lifecycle": {
                                    "postStart": {
                                        "exec": {
                                            "command": [
                                                "sh",
                                                "-c",
                                                "while ! mysqladmin ping -h 127.0.0.1 --silent; do sleep 2; done; mysql -u root -ppassword financedb \u003c /docker-entrypoint-initdb.d/mysql-finances-init.sql"
                                            ]
                                        }
                                    }
                                },
                                "name": "mysql-finances",
                                "ports": [
                                    {
                                        "containerPort": 3306,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File",
                                "volumeMounts": [
                                    {
                                        "mountPath": "/var/lib/mysql",
                                        "name": "mysql-data-finances"
                                    },
                                    {
                                        "mountPath": "/docker-entrypoint-initdb.d",
                                        "name": "mysql-finances-init"
                                    }
                                ]
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30,
                        "volumes": [
                            {
                                "name": "mysql-data-finances",
                                "persistentVolumeClaim": {
                                    "claimName": "mysql-finances-pvc"
                                }
                            },
                            {
                                "configMap": {
                                    "defaultMode": 420,
                                    "items": [
                                        {
                                            "key": "mysql-finances-init.sql",
                                            "path": "mysql-finances-init.sql"
                                        }
                                    ],
                                    "name": "mysql-finances-init-config"
                                },
                                "name": "mysql-finances-init"
                            }
                        ]
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "fullyLabeledReplicas": 1,
                "observedGeneration": 1,
                "readyReplicas": 1,
                "replicas": 1
            }
        },
        {
            "apiVersion": "apps/v1",
            "kind": "ReplicaSet",
            "metadata": {
                "annotations": {
                    "deployment.kubernetes.io/desired-replicas": "1",
                    "deployment.kubernetes.io/max-replicas": "2",
                    "deployment.kubernetes.io/revision": "1"
                },
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "generation": 1,
                "labels": {
                    "app": "mysql-users",
                    "pod-template-hash": "b7c4ff976"
                },
                "name": "mysql-users-deployment-b7c4ff976",
                "namespace": "default",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "Deployment",
                        "name": "mysql-users-deployment",
                        "uid": "6087e2e8-daae-4186-baf0-ba580b368bb0"
                    }
                ],
                "resourceVersion": "3097051",
                "uid": "bb063a04-c850-41ab-ab7a-594eeda391df"
            },
            "spec": {
                "replicas": 1,
                "selector": {
                    "matchLabels": {
                        "app": "mysql-users",
                        "pod-template-hash": "b7c4ff976"
                    }
                },
                "template": {
                    "metadata": {
                        "creationTimestamp": null,
                        "labels": {
                            "app": "mysql-users",
                            "pod-template-hash": "b7c4ff976"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "env": [
                                    {
                                        "name": "MYSQL_ROOT_PASSWORD",
                                        "value": "password"
                                    },
                                    {
                                        "name": "MYSQL_DATABASE",
                                        "value": "userdb"
                                    }
                                ],
                                "image": "mysql:8.0",
                                "imagePullPolicy": "IfNotPresent",
                                "lifecycle": {
                                    "postStart": {
                                        "exec": {
                                            "command": [
                                                "sh",
                                                "-c",
                                                "while ! mysqladmin ping -h 127.0.0.1 --silent; do sleep 2; done \u0026\u0026 mysql -u root -ppassword userdb \u003c /docker-entrypoint-initdb.d/mysql-users-init.sql"
                                            ]
                                        }
                                    }
                                },
                                "name": "mysql-users",
                                "ports": [
                                    {
                                        "containerPort": 3306,
                                        "protocol": "TCP"
                                    }
                                ],
                                "resources": {},
                                "terminationMessagePath": "/dev/termination-log",
                                "terminationMessagePolicy": "File",
                                "volumeMounts": [
                                    {
                                        "mountPath": "/var/lib/mysql",
                                        "name": "mysql-data-users"
                                    },
                                    {
                                        "mountPath": "/docker-entrypoint-initdb.d",
                                        "name": "mysql-users-init"
                                    }
                                ]
                            }
                        ],
                        "dnsPolicy": "ClusterFirst",
                        "restartPolicy": "Always",
                        "schedulerName": "default-scheduler",
                        "securityContext": {},
                        "terminationGracePeriodSeconds": 30,
                        "volumes": [
                            {
                                "name": "mysql-data-users",
                                "persistentVolumeClaim": {
                                    "claimName": "mysql-users-pvc"
                                }
                            },
                            {
                                "configMap": {
                                    "defaultMode": 420,
                                    "items": [
                                        {
                                            "key": "mysql-users-init.sql",
                                            "path": "mysql-users-init.sql"
                                        }
                                    ],
                                    "name": "mysql-users-init-config"
                                },
                                "name": "mysql-users-init"
                            }
                        ]
                    }
                }
            },
            "status": {
                "availableReplicas": 1,
                "fullyLabeledReplicas": 1,
                "observedGeneration": 1,
                "readyReplicas": 1,
                "replicas": 1
            }
        },
        {
            "apiVersion": "v1",
            "kind": "PersistentVolumeClaim",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"PersistentVolumeClaim\",\"metadata\":{\"annotations\":{},\"name\":\"mongo-pvc\",\"namespace\":\"default\"},\"spec\":{\"accessModes\":[\"ReadWriteOnce\"],\"resources\":{\"requests\":{\"storage\":\"1Gi\"}},\"storageClassName\":\"manual-mongo\"}}\n",
                    "pv.kubernetes.io/bind-completed": "yes",
                    "pv.kubernetes.io/bound-by-controller": "yes"
                },
                "creationTimestamp": "2024-11-28T08:23:45Z",
                "finalizers": [
                    "kubernetes.io/pvc-protection"
                ],
                "name": "mongo-pvc",
                "namespace": "default",
                "resourceVersion": "1389778",
                "uid": "5418a905-effa-45e7-b84b-4028209cf694"
            },
            "spec": {
                "accessModes": [
                    "ReadWriteOnce"
                ],
                "resources": {
                    "requests": {
                        "storage": "1Gi"
                    }
                },
                "storageClassName": "manual-mongo",
                "volumeMode": "Filesystem",
                "volumeName": "mongo-pv-volume"
            },
            "status": {
                "accessModes": [
                    "ReadWriteOnce"
                ],
                "capacity": {
                    "storage": "1Gi"
                },
                "phase": "Bound"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "PersistentVolumeClaim",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"PersistentVolumeClaim\",\"metadata\":{\"annotations\":{},\"name\":\"mysql-finances-pvc\",\"namespace\":\"default\"},\"spec\":{\"accessModes\":[\"ReadWriteOnce\"],\"resources\":{\"requests\":{\"storage\":\"1Gi\"}},\"storageClassName\":\"manual-finances\"}}\n",
                    "pv.kubernetes.io/bind-completed": "yes",
                    "pv.kubernetes.io/bound-by-controller": "yes"
                },
                "creationTimestamp": "2024-11-28T08:23:45Z",
                "finalizers": [
                    "kubernetes.io/pvc-protection"
                ],
                "name": "mysql-finances-pvc",
                "namespace": "default",
                "resourceVersion": "1389784",
                "uid": "035843fe-f0eb-4036-8d87-d6e250acc664"
            },
            "spec": {
                "accessModes": [
                    "ReadWriteOnce"
                ],
                "resources": {
                    "requests": {
                        "storage": "1Gi"
                    }
                },
                "storageClassName": "manual-finances",
                "volumeMode": "Filesystem",
                "volumeName": "mysql-finance-pv-volume"
            },
            "status": {
                "accessModes": [
                    "ReadWriteOnce"
                ],
                "capacity": {
                    "storage": "1Gi"
                },
                "phase": "Bound"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "PersistentVolumeClaim",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"PersistentVolumeClaim\",\"metadata\":{\"annotations\":{},\"name\":\"mysql-users-pvc\",\"namespace\":\"default\"},\"spec\":{\"accessModes\":[\"ReadWriteOnce\"],\"resources\":{\"requests\":{\"storage\":\"1Gi\"}},\"storageClassName\":\"manual-users\"}}\n",
                    "pv.kubernetes.io/bind-completed": "yes",
                    "pv.kubernetes.io/bound-by-controller": "yes"
                },
                "creationTimestamp": "2024-11-28T08:23:45Z",
                "finalizers": [
                    "kubernetes.io/pvc-protection"
                ],
                "name": "mysql-users-pvc",
                "namespace": "default",
                "resourceVersion": "1389788",
                "uid": "34bd86ea-9916-463b-9f0d-d82453ea3548"
            },
            "spec": {
                "accessModes": [
                    "ReadWriteOnce"
                ],
                "resources": {
                    "requests": {
                        "storage": "1Gi"
                    }
                },
                "storageClassName": "manual-users",
                "volumeMode": "Filesystem",
                "volumeName": "mysql-users-pv-volume"
            },
            "status": {
                "accessModes": [
                    "ReadWriteOnce"
                ],
                "capacity": {
                    "storage": "1Gi"
                },
                "phase": "Bound"
            }
        },
        {
            "apiVersion": "v1",
            "data": {
                "ca.crt": "-----BEGIN CERTIFICATE-----\nMIIDBTCCAe2gAwIBAgIIInTFsCBgZHgwDQYJKoZIhvcNAQELBQAwFTETMBEGA1UE\nAxMKa3ViZXJuZXRlczAeFw0yNDExMTMxMDExMTlaFw0zNDExMTExMDE2MTlaMBUx\nEzARBgNVBAMTCmt1YmVybmV0ZXMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEK\nAoIBAQCzDoO1w9ahHwYxsK3IVJ5SilhmhxNa6J68anR9EaXwFeGwWyWd0ZFji6uz\nFB9QLQwVRxubnuQnHh4UUt0Imdw1areediVQRb12WzWApM2jz18FTgOHHSXkS8cL\nONkzp4SbRJqBu5/d9M0BmzrCM11ExtqakrjTWB32dApH+xHgaG8IWUoJ5EbozMbf\ndm/ceLira+O0XtaD3tmiBcCeroVaAksqQK5EnCoS7GOdMTE4 [...]
            },
            "kind": "ConfigMap",
            "metadata": {
                "annotations": {
                    "kubernetes.io/description": "Contains a CA bundle that can be used to verify the kube-apiserver when using internal endpoints such as the internal service IP or kubernetes.default.svc. No other usage is guaranteed across distributions of Kubernetes clusters."
                },
                "creationTimestamp": "2024-11-13T10:17:28Z",
                "name": "kube-root-ca.crt",
                "namespace": "default",
                "resourceVersion": "375",
                "uid": "59da60d5-8880-433d-8929-fbc74b7a13bc"
            }
        },
        {
            "apiVersion": "v1",
            "data": {
                "mongo-init.js": "// Archivo para inicializar MongoDB con datos predefinidos.\ndb = db.getSiblingDB('financedb');\n\ndb.createCollection('finances');\n\ndb.finances.insertMany([\n    { date: \"2024-01-01\", revenue: 5000, expense: 3000 },\n    { date: \"2024-02-01\", revenue: 6000, expense: 4000 },\n    { date: \"2024-03-01\", revenue: 7000, expense: 4500 },\n    { date: \"2024-04-01\", revenue: 8000, expense: 5000 }\n]);\n\nprint(\"Datos iniciales insertados en MongoDB\");\n"
            },
            "kind": "ConfigMap",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"mongo-init.js\":\"// Archivo para inicializar MongoDB con datos predefinidos.\\ndb = db.getSiblingDB('financedb');\\n\\ndb.createCollection('finances');\\n\\ndb.finances.insertMany([\\n    { date: \\\"2024-01-01\\\", revenue: 5000, expense: 3000 },\\n    { date: \\\"2024-02-01\\\", revenue: 6000, expense: 4000 },\\n    { date: \\\"2024-03-01\\\", revenue: 7000, expense: 4500 },\\n    { dat [...]
                },
                "creationTimestamp": "2024-11-28T08:23:44Z",
                "name": "mongo-init-config",
                "namespace": "default",
                "resourceVersion": "1389769",
                "uid": "edb9f097-788b-47c3-8744-99b3161bccc2"
            }
        },
        {
            "apiVersion": "v1",
            "data": {
                "mysql-finances-init.sql": "-- Crear base de datos si no existe\nCREATE DATABASE IF NOT EXISTS financedb;\n\n-- Usar la base de datos creada\nUSE financedb;\n\n-- Crear tabla 'finances'\nCREATE TABLE IF NOT EXISTS finances (\n    id INT AUTO_INCREMENT PRIMARY KEY,\n    date DATE NOT NULL,\n    revenue DECIMAL(10, 2) NOT NULL,\n    expense DECIMAL(10, 2) NOT NULL\n);\n\n-- Insertar datos iniciales solo si la tabla 'finances' fue creada\n    INSERT INTO finances (date, revenue, exp [...]
            },
            "kind": "ConfigMap",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"mysql-finances-init.sql\":\"-- Crear base de datos si no existe\\nCREATE DATABASE IF NOT EXISTS financedb;\\n\\n-- Usar la base de datos creada\\nUSE financedb;\\n\\n-- Crear tabla 'finances'\\nCREATE TABLE IF NOT EXISTS finances (\\n    id INT AUTO_INCREMENT PRIMARY KEY,\\n    date DATE NOT NULL,\\n    revenue DECIMAL(10, 2) NOT NULL,\\n    expense DECIMAL(10, 2) NOT NULL\\n);\\n\\n-- Ins [...]
                },
                "creationTimestamp": "2024-11-28T08:23:45Z",
                "name": "mysql-finances-init-config",
                "namespace": "default",
                "resourceVersion": "1389771",
                "uid": "6dc4ab32-94b6-48e7-85cc-0b9b366e18fe"
            }
        },
        {
            "apiVersion": "v1",
            "data": {
                "mysql-users-init.sql": "-- Crear base de datos para usuarios si no existe\nCREATE DATABASE IF NOT EXISTS userdb;\n\n-- Usar la base de datos de usuarios\nUSE userdb;\n\n-- Crear tabla 'users'\nCREATE TABLE IF NOT EXISTS users (\n    id INT AUTO_INCREMENT PRIMARY KEY,\n    username VARCHAR(50) NOT NULL UNIQUE,\n    password VARCHAR(255) NOT NULL,\n    email VARCHAR(100) NOT NULL UNIQUE,\n    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n);\n\n# -- Insertar datos iniciales (usua [...]
            },
            "kind": "ConfigMap",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"mysql-users-init.sql\":\"-- Crear base de datos para usuarios si no existe\\nCREATE DATABASE IF NOT EXISTS userdb;\\n\\n-- Usar la base de datos de usuarios\\nUSE userdb;\\n\\n-- Crear tabla 'users'\\nCREATE TABLE IF NOT EXISTS users (\\n    id INT AUTO_INCREMENT PRIMARY KEY,\\n    username VARCHAR(50) NOT NULL UNIQUE,\\n    password VARCHAR(255) NOT NULL,\\n    email VARCHAR(100) NOT NULL [...]
                },
                "creationTimestamp": "2024-11-28T08:23:45Z",
                "name": "mysql-users-init-config",
                "namespace": "default",
                "resourceVersion": "1389772",
                "uid": "a6add396-3ddd-4f46-8229-0b03dee5f9da"
            }
        },
        {
            "apiVersion": "v1",
            "data": {
                "MYSQL_PASSWORD": "MTIzNDU2"
            },
            "kind": "Secret",
            "metadata": {
                "creationTimestamp": "2024-11-26T09:40:30Z",
                "name": "mi-secret",
                "namespace": "default",
                "resourceVersion": "1005675",
                "uid": "44165d30-8c93-4c42-b40f-252276e44b80"
            },
            "type": "Opaque"
        },
        {
            "apiVersion": "v1",
            "data": {
                "MYSQL_DB_PASSWORD": "MTIzNDU2",
                "MYSQL_DB_USER": "cHJ1ZWJhcw==",
                "MYSQL_IP": "MTcyLjE2LjEuMjEx"
            },
            "kind": "Secret",
            "metadata": {
                "creationTimestamp": "2024-11-28T08:23:46Z",
                "name": "mysql-secret",
                "namespace": "default",
                "resourceVersion": "1389810",
                "uid": "b2462568-3134-4591-8c50-80abf69fac71"
            },
            "type": "Opaque"
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "Ingress",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"nginx.ingress.kubernetes.io/rewrite-target\":\"/\"},\"name\":\"productpage-ingress\",\"namespace\":\"default\"},\"spec\":{\"rules\":[{\"host\":\"productpage.lab.local\",\"http\":{\"paths\":[{\"backend\":{\"service\":{\"name\":\"productpage\",\"port\":{\"number\":9080}}},\"path\":\"/\",\"pathType\":\"Prefix\"}]}}]}}\n",
                    "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "creationTimestamp": "2024-11-20T08:58:04Z",
                "generation": 1,
                "name": "productpage-ingress",
                "namespace": "default",
                "resourceVersion": "390135",
                "uid": "07539901-8c8e-4b9d-b6e0-8245b1ad81c6"
            },
            "spec": {
                "rules": [
                    {
                        "host": "productpage.lab.local",
                        "http": {
                            "paths": [
                                {
                                    "backend": {
                                        "service": {
                                            "name": "productpage",
                                            "port": {
                                                "number": 9080
                                            }
                                        }
                                    },
                                    "path": "/",
                                    "pathType": "Prefix"
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "loadBalancer": {}
            }
        },
        {
            "apiVersion": "v1",
            "kind": "ServiceAccount",
            "metadata": {
                "creationTimestamp": "2024-11-13T10:17:28Z",
                "name": "default",
                "namespace": "default",
                "resourceVersion": "361",
                "uid": "6c51cb43-a0bb-4324-9031-eaf66c8b7c10"
            }
        }
    ],
    "kind": "List",
    "metadata": {
        "resourceVersion": ""
    }
}
